# vivado-report-parser

./: .gitignore  README.md  conftest.py  pyproject.toml
tests/integration/: test_inputs.py  test_integration.py
tests/integration/fixtures/: power.rpt  timing.rpt  utilization.json  utilization.rpt
tests/integration/fixtures/goldens/: power.rpt  timing-CRLF.rpt  utilization.rpt  utilization2023.rpt
tests/integration/fixtures/inputs/: power.rpt  timing-CRLF.rpt  timing.rpt  utilization-CRLF.rpt  utilization2023.rpt
tests/integration/fixtures/outputs/: power.rpt  timing-CRLF.rpt  utilization.rpt  utilization2023.rpt
vivado_report_parser/: __init__.py  cli.py  helpers.py  metadata.py  parse_vivado_report.py  tables.py  timing.py  utilization.py
