[tool.poetry]
name = "vivado-report-parser"
version = "0.3.0"
description = "A Python library for parsing Vivado report files."
license = "GPL-3.0-or-later"
authors = ["Jesse Looney <jmlooney64@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jesselooney/vivado-report-parser"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"

[tool.poetry.scripts]
parse-vivado-report = "vivado_report_parser.parse_vivado_report:main"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
